public interface Condicion {
    public boolean cumple(Articulo a);
}